--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,8 @@
 ---
 layout: page
-title: about
+title: About Me
 type: about
 ---
+
+Jason Qiu, Majoring Computer Science in BUPT. 
+Contact me via email [superqjx@hotmail.com](mailto:superqjx@hotmail.com). 
