--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,6 @@
 ---
 layout: page
-title: About Me
+title: about
 type: about
 ---
 
-Jason Qiu, Majoring Computer Science in BUPT. 
-Contact me via email [superqjx@hotmail.com](mailto:superqjx@hotmail.com). 
